--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <label for="dose">Dose desired (mg):</label>
   <input type="number" id="dose" step="0.01" />
 
-  <label for="volume">Bacteriostatic water amount to be used:</label>
+  <label for="volume">Bacteriostatic water amount to be used: (Select Units or mL)</label>
   <input type="number" id="volume" step="0.1" />
 
   <div class="unit-toggle">
