--- a/info.html
+++ b/info.html
@@ -2,31 +2,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Cache-Control" content="no-store" />
-  <title>PeptiCalc - Peptide Info</title>
+  <title>PeptiCalc - Peptide Guide</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
       margin: 0;
       padding: 0;
+      background-color: #f5f5f5;
     }
     header {
       background-color: #2c3e50;
       padding: 15px 20px;
       color: white;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
     }
     header h1 {
       margin: 0;
       font-size: 20px;
+      flex: 1 1 100%;
+    }
+    nav {
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+      margin-top: 10px;
     }
     nav a {
-      margin-left: 20px;
       color: white;
       text-decoration: none;
       font-weight: bold;
@@ -36,7 +43,7 @@
     }
     main {
       padding: 20px;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       background-color: white;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
@@ -46,6 +53,15 @@
     }
     section {
       margin-bottom: 30px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 10px auto;
+      border: 1px solid #ccc;
+      padding: 5px;
+      background: #fff;
     }
     footer {
       font-size: 12px;
@@ -68,31 +84,34 @@
   <main>
     <section>
       <h2>What Are Peptides?</h2>
-      <p>Peptides are short chains of amino acids that play a vital role in many biological functions. In medicine and research, peptides are used for purposes ranging from weight management to muscle recovery, anti-aging, and more. Common therapeutic peptides include GLP-1 receptor agonists such as <strong>semaglutide</strong> and <strong>tirzepatide</strong>.</p>
-    </section>
-
-    <section>
-      <h2>Understanding GLP-1 Peptides</h2>
-      <p>GLP-1 peptides help regulate blood sugar, appetite, and digestion. These compounds are frequently used in the treatment of Type 2 diabetes and weight loss protocols. Examples include:</p>
+      <p>Peptides are short chains of amino acids used widely in medicine and research. Therapeutic peptides can aid in recovery, inflammation control, fat loss, and more. Common examples include:</p>
       <ul>
-        <li><strong>Semaglutide</strong> (e.g., Ozempic, Wegovy)</li>
-        <li><strong>Tirzepatide</strong> (e.g., Mounjaro, Zepbound)</li>
+        <li><strong>GLP-1 receptor agonists</strong> like <strong>semaglutide</strong> and <strong>tirzepatide</strong></li>
+        <li><strong>BPC-157</strong> – promotes tissue healing and gut repair</li>
+        <li><strong>TB-500</strong> – used for muscle recovery and inflammation control</li>
       </ul>
-      <p>When reconstituting these peptides, dosage precision is key, which is where PeptiCalc comes in.</p>
     </section>
 
     <section>
       <h2>How Reconstitution Works</h2>
-      <p>Most peptides come in a lyophilized (freeze-dried) form and need to be mixed with <strong>bacteriostatic water</strong>. This process is known as reconstitution. Once reconstituted, users can measure out precise doses using insulin syringes or mL-based measurements. 1 mL = 100 insulin units.</p>
+      <p>Peptides typically come lyophilized (freeze-dried) and must be reconstituted using bacteriostatic water (BAC water). Follow these steps:</p>
+      <ol>
+        <li>Wipe vial tops with alcohol.</li>
+        <li>Draw desired amount of BAC water using a sterile syringe.</li>
+        <li>Slowly inject water into the peptide vial against the glass wall (not directly into the powder).</li>
+        <li>Let it sit and dissolve without shaking. You may gently swirl if needed.</li>
+      </ol>
+      <img src="https://i.imgur.com/Qr2tK5e.png" alt="Peptide Reconstitution Diagram" />
+      <p><em>Diagram: Inject BAC water along the vial wall to avoid denaturing the peptide.</em></p>
     </section>
 
     <section>
       <h2>Tips for Accurate Dosing</h2>
       <ul>
-        <li>Always use sterile techniques when handling peptides.</li>
-        <li>Double-check your math or use a trusted calculator like PeptiCalc.</li>
-        <li>Store reconstituted peptides in the fridge as directed by the manufacturer.</li>
-        <li>Consult a licensed healthcare provider before use.</li>
+        <li>Use insulin syringes marked in units or convert to mL as needed (1 mL = 100 units).</li>
+        <li>Label vials with concentration after mixing.</li>
+        <li>Store reconstituted peptides in the refrigerator.</li>
+        <li>Always consult with a healthcare provider before using any peptide therapies.</li>
       </ul>
     </section>
   </main>
