--- a/info.html
+++ b/info.html
@@ -15,31 +15,36 @@
     }
     header {
       background-color: #2c3e50;
-      padding: 15px 20px;
-      color: white;
+      padding: 10px 20px;
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
     }
     header h1 {
-      margin: 0;
-      font-size: 20px;
+      margin: 0 auto;
+      color: white;
+      font-size: 22px;
+      text-align: center;
       flex: 1 1 100%;
     }
     nav {
       display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
       margin-top: 10px;
+      flex: 1 1 100%;
     }
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
+      padding: 5px 10px;
+      background-color: #34495e;
+      border-radius: 5px;
     }
     nav a:hover {
-      text-decoration: underline;
+      background-color: #1abc9c;
     }
     main {
       padding: 20px;
@@ -79,6 +84,7 @@
     <nav>
       <a href="index.html">Peptide Calculator</a>
       <a href="info.html">Peptide Guide</a>
+      <a href="faq.html">FAQ</a>
     </nav>
   </header>
   <main>
@@ -94,24 +100,27 @@
 
     <section>
       <h2>How Reconstitution Works</h2>
-      <p>Peptides typically come lyophilized (freeze-dried) and must be reconstituted using bacteriostatic water (BAC water). Follow these steps:</p>
+      <p>Peptides typically come lyophilized (freeze-dried) and must be reconstituted using bacteriostatic water. Here's a general reconstitution process:</p>
       <ol>
-        <li>Wipe vial tops with alcohol.</li>
-        <li>Draw desired amount of BAC water using a sterile syringe.</li>
-        <li>Slowly inject water into the peptide vial against the glass wall (not directly into the powder).</li>
-        <li>Let it sit and dissolve without shaking. You may gently swirl if needed.</li>
+        <li>Wipe the tops of both vials (peptide and BAC water) with an alcohol swab.</li>
+        <li>Backload your insulin syringe with a small amount of air (~1 mL) before inserting into the BAC vial. This helps equalize internal pressure and makes withdrawing the liquid easier.</li>
+        <li>Draw the desired volume of BAC water.</li>
+        <li>Inject the water slowly into the peptide vial, aiming against the inner glass wall (not directly into the powder).</li>
+        <li>Let the vial sit still. Do not shake. Swirl gently if needed.</li>
       </ol>
-      <img src="https://i.imgur.com/Qr2tK5e.png" alt="Peptide Reconstitution Diagram" />
-      <p><em>Diagram: Inject BAC water along the vial wall to avoid denaturing the peptide.</em></p>
+      <p>Once the peptide is fully dissolved, it is ready for accurate dosing using insulin syringes or mL-based measurements.</p>
+      <img src="https://cdn1.iconfinder.com/data/icons/medical-145/64/mix-vial-bottle-syringe-vaccine-medical-512.png" alt="Peptide Mixing Illustration" />
     </section>
 
     <section>
-      <h2>Tips for Accurate Dosing</h2>
+      <h2>Drawing Your Dose</h2>
+      <p>After reconstitution, use the calculator on the main page to determine your draw amount. Here's how to do it safely:</p>
       <ul>
-        <li>Use insulin syringes marked in units or convert to mL as needed (1 mL = 100 units).</li>
-        <li>Label vials with concentration after mixing.</li>
-        <li>Store reconstituted peptides in the refrigerator.</li>
-        <li>Always consult with a healthcare provider before using any peptide therapies.</li>
+        <li>Use a fresh sterile insulin syringe.</li>
+        <li>Wipe the vial again with alcohol before inserting the needle.</li>
+        <li>Backload air again to equalize pressure before withdrawing.</li>
+        <li>Withdraw the calculated amount based on your peptide concentration.</li>
+        <li>Inject as directed by your medical provider, typically subcutaneously.</li>
       </ul>
     </section>
   </main>
