--- a/index.html
+++ b/index.html
@@ -5,71 +5,184 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Cache-Control" content="no-store" />
-  <meta name="description" content="PeptiCalc is a lightweight peptide dosage calculator for GLP-1s like semaglutide and tirzepatide. Supports reconstitution in mL or units.">
-  <meta name="keywords" content="peptide calculator, glp-1 dosage, semaglutide calculator, tirzepatide dose, insulin syringe units, reconstitute peptide">
-  <meta name="author" content="PeptiCalc.com">
-  <meta property="og:title" content="PeptiCalc - Peptide Dosage Calculator">
-  <meta property="og:description" content="Simple peptide calculator for GLP-1s and related compounds. Choose units or mL.">
-  <meta property="og:url" content="https://www.pepticalc.com">
-  <meta property="og:type" content="website">
-  <title>PeptiCalc</title>
+  <title>PeptiCalc - Calculator</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 700px; margin: auto; background-color: #f9f9f9; }
-    h1 { text-align: center; color: #2c3e50; }
-    label { display: inline-block; width: 60%; margin-bottom: 10px; font-weight: bold; }
-    input, select { width: 30%; padding: 6px; font-size: 14px; margin-bottom: 15px; }
-    .input-group { display: flex; align-items: center; justify-content: space-between; margin: 10px 0; }
-    .unit-toggle { display: inline-flex; gap: 10px; margin-left: 10px; }
-    .unit-toggle button { padding: 6px 12px; font-size: 14px; border: 1px solid #ccc; background-color: #eee; cursor: pointer; }
-    .unit-toggle button.active { background-color: #4CAF50; color: white; border-color: #4CAF50; }
-    button.calculate, button.reset { width: 33%; padding: 10px; font-size: 14px; border: none; border-radius: 4px; cursor: pointer; display: block; margin: 10px auto; }
-    button.calculate { background-color: #3498db; color: white; }
-    button.calculate:hover { background-color: #2980b9; }
-    button.reset { background-color: #e74c3c; color: white; }
-    button.reset:hover { background-color: #c0392b; }
-    #result { margin-top: 20px; font-size: 16px; color: #333; }
-    .disclaimer { font-size: 12px; color: #666; margin-top: 30px; border-top: 1px solid #ccc; padding-top: 10px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+    }
+    header {
+      background-color: #2c3e50;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    header h1 {
+      margin: 0 auto;
+      color: white;
+      font-size: 22px;
+      text-align: center;
+      flex: 1 1 100%;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+      flex: 1 1 100%;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 5px 10px;
+      background-color: #34495e;
+      border-radius: 5px;
+    }
+    nav a:hover {
+      background-color: #1abc9c;
+    }
+    main {
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+      background-color: white;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #2c3e50;
+      text-align: center;
+    }
+    .input-group {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+    label {
+      flex: 1;
+      font-weight: bold;
+      margin-right: 10px;
+    }
+    input, select {
+      flex: 1;
+      padding: 8px;
+      font-size: 14px;
+    }
+    .unit-toggle {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 5px;
+    }
+    .unit-toggle button {
+      flex: 1;
+      margin: 0 5px;
+      padding: 8px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      background-color: #eee;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    .unit-toggle button.active {
+      background-color: #4CAF50;
+      color: white;
+      border-color: #4CAF50;
+    }
+    button.calculate, button.reset {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
+    button.calculate {
+      background-color: #3498db;
+      color: white;
+    }
+    button.calculate:hover {
+      background-color: #2980b9;
+    }
+    button.reset {
+      background-color: #e74c3c;
+      color: white;
+    }
+    button.reset:hover {
+      background-color: #c0392b;
+    }
+    #result {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #333;
+      text-align: center;
+    }
+    .disclaimer {
+      font-size: 12px;
+      color: #666;
+      margin-top: 30px;
+      border-top: 1px solid #ccc;
+      padding-top: 10px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
-  <h1>PeptiCalc</h1>
-  <p><strong>Note:</strong> 1 mL = 1 cc = 100 units. This calculator allows reconstitution volume to be entered in either mL or insulin syringe units.</p>
+  <header>
+    <h1>PeptiCalc</h1>
+    <nav>
+      <a href="index.html">Peptide Calculator</a>
+      <a href="info.html">Peptide Guide</a>
+      <a href="faq.html">FAQ</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Peptide Dosage Calculator</h2>
+    <p style="text-align: center;"><strong>Note:</strong> 1 mL = 1 cc = 100 units. Enter bacteriostatic water in either mL or units.</p>
 
-  <div class="input-group">
-    <label for="peptide">Total vial dosage:</label>
-    <input type="number" id="peptide" step="0.01" />
-    <select id="peptideUnit">
-      <option value="mg" selected>mg</option>
-      <option value="mcg">mcg</option>
-    </select>
-  </div>
+    <div class="input-group">
+      <label for="peptide">Total vial dosage:</label>
+      <input type="number" id="peptide" step="0.01" />
+      <select id="peptideUnit">
+        <option value="mg" selected>mg</option>
+        <option value="mcg">mcg</option>
+      </select>
+    </div>
 
-  <div class="input-group">
-    <label for="dose">Dose desired:</label>
-    <input type="number" id="dose" step="0.01" />
-    <select id="doseUnit">
-      <option value="mg" selected>mg</option>
-      <option value="mcg">mcg</option>
-    </select>
-  </div>
+    <div class="input-group">
+      <label for="dose">Dose desired:</label>
+      <input type="number" id="dose" step="0.01" />
+      <select id="doseUnit">
+        <option value="mg" selected>mg</option>
+        <option value="mcg">mcg</option>
+      </select>
+    </div>
 
-  <div class="input-group">
-    <label for="volume">Bacteriostatic water amount to be used: (Select Units or mL)</label>
-    <input type="number" id="volume" step="0.1" />
+    <div class="input-group">
+      <label for="volume">Bacteriostatic water to use:</label>
+      <input type="number" id="volume" step="0.1" />
+    </div>
+
     <div class="unit-toggle">
       <button type="button" onclick="selectUnit('units')" id="unitBtnUnits">Units</button>
       <button type="button" onclick="selectUnit('ml')" id="unitBtnMl">mL</button>
     </div>
-  </div>
 
-  <button class="calculate" onclick="calculate()">Calculate</button>
-  <button class="reset" onclick="resetFields()">Reset</button>
+    <button class="calculate" onclick="calculate()">Calculate</button>
+    <button class="reset" onclick="resetFields()">Reset</button>
 
-  <div id="result"></div>
+    <div id="result"></div>
 
-  <div class="disclaimer">
-    <strong>Disclaimer:</strong> This calculator is for informational use only. Peptide dosing should always be done under the supervision of a qualified medical professional. Do not use this tool as a substitute for medical advice, diagnosis, or treatment.
-  </div>
+    <div class="disclaimer">
+      This calculator is for educational use only. Peptide dosing should always be done under medical supervision.
+    </div>
+  </main>
 
   <script>
     let selectedUnit = "units";
@@ -93,7 +206,6 @@
       let peptide = parseFloat(document.getElementById('peptide').value);
       let dose = parseFloat(document.getElementById('dose').value);
       let volume = parseFloat(document.getElementById('volume').value);
-
       const peptideUnit = document.getElementById('peptideUnit').value;
       const doseUnit = document.getElementById('doseUnit').value;
       const resultBox = document.getElementById('result');
@@ -104,9 +216,9 @@
         return;
       }
 
-      if (peptideUnit === "mcg") peptide = peptide / 1000;
-      if (doseUnit === "mcg") dose = dose / 1000;
-      if (selectedUnit === 'units') volume = volume / 100;
+      if (peptideUnit === "mcg") peptide /= 1000;
+      if (doseUnit === "mcg") dose /= 1000;
+      if (selectedUnit === "units") volume /= 100;
 
       const concentration = peptide / volume;
       const mLperDose = dose / concentration;
@@ -114,25 +226,26 @@
       const totalDoses = peptide / dose;
 
       if (totalDoses < 1) {
-        resultBox.innerText = "⚠️ Error: Your total vial dosage is too low to yield even 1 full dose at the specified amount.";
+        resultBox.innerText = "⚠️ Error: Total vial dosage is too low for even one dose at the selected amount.";
         resultBox.style.color = "red";
         return;
       }
 
+      const displayDose = doseUnit === "mcg" ? (dose * 1000).toFixed(1) + " mcg" : dose.toFixed(3) + " mg";
+
       resultBox.style.color = "#333";
-      resultBox.innerHTML =
-        `<strong>Draw:</strong> ${unitsPerDose.toFixed(0)} units (${mLperDose.toFixed(2)} mL)<br>
-         To get a dose of ${dose.toFixed(3)} mg<br>
-         Once reconstituted, this vial will contain approximately ${totalDoses.toFixed(2)} doses at that amount.`;
+      resultBox.innerHTML = `<strong>Draw:</strong> ${unitsPerDose.toFixed(0)} units (${mLperDose.toFixed(2)} mL)<br>
+        To get a dose of ${displayDose}<br>
+        Once reconstituted, this vial will contain approximately ${totalDoses.toFixed(2)} doses at that amount.`;
     }
 
     function resetFields() {
       document.getElementById('peptide').value = "";
       document.getElementById('dose').value = "";
       document.getElementById('volume').value = "";
-      document.getElementById('result').innerHTML = "";
       document.getElementById('peptideUnit').value = "mg";
       document.getElementById('doseUnit').value = "mg";
+      document.getElementById('result').innerHTML = "";
       selectUnit('units');
     }
   </script>
