--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <a href="faq.html">FAQ</a>
     </nav>
   </header>
-  <main>
+  <main style="display: flex; flex-direction: column; align-items: center;">
     <h2>Peptide Dosage Calculator</h2>
     <p style="text-align: center;"><strong>Note:</strong> 1 mL = 1 cc = 100 units. Enter bacteriostatic water in either mL or insulin units.</p>
 
