--- a/info.html
+++ b/info.html
@@ -119,7 +119,8 @@
         <li>Wipe the vial again with alcohol before inserting the needle.</li>
         <li>Backload air again to equalize pressure before withdrawing.</li>
         <li>Withdraw the calculated amount based on your peptide concentration.</li>
-        <li>Inject as directed by your medical provider, typically subcutaneously.</li>
+        <li>Clean the injection site with an alcohol swab and let it dry before injecting.</li>
+        <li>Inject the dose as instructed by your healthcare provider, typically via subcutaneous (under the skin) injection.</li>
       </ul>
     </section>
   </main>
