--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="PeptiCalc is a free peptide dosage and reconstitution calculator for GLP-1s and other peptides like semaglutide, BPC-157, and TB-500. Calculate dosages in mg, mcg, mL, or insulin units." />
   <meta http-equiv="Cache-Control" content="no-store" />
-  <title>PeptiCalc - Calculator</title>
+  <title>Peptide Calculator - PeptiCalc | Dosage & Reconstitution Tool for GLP1s etc</title>
   <style>
     body {
       font-family: Arial, sans-serif;
